Changed API to use verbs. Added patch.
