# openapi.yml
@@ -1,7 +1,7 @@
 openapi: '3.0.3'
 info:
   title: testevents
-  version: '0.1.0'
+  version: '0.2.0'
 servers:
   - url: https://localhost:3003/
 paths:
@@ -35,7 +35,7 @@ paths:
                     type: string
                   traceparent:
                     type: string
-  /child/{trace_id}/{span_id}:
+  /{trace_id}/{span_id}/:
     post:
       summary: Create a child span
       requestBody:
@@ -75,8 +75,7 @@ paths:
                   err:
                     type: string
                     default: 'Span not found'
-  /close/{trace_id}/{span_id}:
-    get:
+    delete:
       summary: Close a span
       responses:
         '200':
@@ -89,3 +88,41 @@ paths:
                   message:
                     type: string
                     default: 'OK'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  err:
+                    type: string
+                    default: 'Span not found'
+    patch:
+      summary: Update a span
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    default: 'OK'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  err:
+                    type: string
+                    default: 'Span not found'
